<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/title_paired_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:paddingLeft="5dp"
        android:text="@string/bluetooth_paired_devices"
        android:textColor="#fff"
        />

    <ListView
        android:id="@+id/lv_paired_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:stackFromBottom="false"
        />

    <TextView
        android:id="@+id/title_new_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:paddingLeft="5dp"
        android:text="@string/bluetooth_other_devices"
        android:textColor="#fff"
        />

    <ListView
        android:id="@+id/lv_new_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:stackFromBottom="false"
        />

    <Button
        android:id="@+id/button_scan_bluetooth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:drawableLeft="@drawable/ic_bluetooth_searching_black_24dp"
        android:textColor="#ffffff"
        android:layout_margin="10dp"
        android:text="@string/bluetooth_scan"
        />
</LinearLayout>